# Simple-DES

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/bridge/: CryptoBridge.cpp  CryptoBridge.h
src/core/: SDES.cpp  SDES.h
src/qml/: main.qml
